Adjusted Architecture
Co-Authored-By: juliannldo <145292403+juliannldo@users.noreply.github.com>
Co-Authored-By: Svarun <95188575+svarunsoda@users.noreply.github.com>
Co-Authored-By: 122Chriskz <123114984+122chriskz@users.noreply.github.com>